# breakout_engine

./: CMakeLists.txt  roadmap.md
objects/: Ball.h  Brick.cpp  Brick.h  Paddle.h  Powerup.cpp  Powerup.h
src/: Paddle.cpp  Paddle.h  Powerup.cpp  main.cpp
src/objects/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Bullet.cpp  Bullet.h  Paddle.cpp  Paddle.h  Powerup.cpp  Powerup.h
src/systems/: Game.cpp  Game.h  Level.cpp  Menu.cpp  Menu.h  SpriteRenderer.cpp  SpriteRenderer.h
src/util/: Texture.cpp  Texture.h  stb_image.c
systems/: Game.cpp  Level.h  SpriteRenderer.h
util/: Audio.cpp  Audio.h  Texture.cpp
